--- a/public/TH/lab.html
+++ b/public/TH/lab.html
@@ -25,6 +25,11 @@
 <body>
 
 <h1>Danh sách Lab</h1>
+<h1>Nguyễn Hữu Khang 
+    D22_TH13
+    Nhóm : 05
+    Ca học : Thứ 5 ca 2
+</h1>
 
 <ul>
     <li><a href="labs/lab02/index.html">Lab 02</a></li>
