--- a/public/TH/lab.html
+++ b/public/TH/lab.html
@@ -26,9 +26,9 @@
 
 <h1>Danh sách Lab</h1>
 <h1>Nguyễn Hữu Khang 
-    D22_TH13
-    Nhóm : 05
-    Ca học : Thứ 5 ca 2
+  <br>  Lớp:D22_TH13
+   <br>  Nhóm : 05
+   <br>  Ca học : Thứ 5 ca 2
 </h1>
 
 <ul>
