--- a/public/TH/lab.html
+++ b/public/TH/lab.html
@@ -26,6 +26,7 @@
 
 <h1>Danh sách Lab</h1>
 <h1>Nguyễn Hữu Khang 
+    Homo nay la htu 4
   <br>  Lớp:D22_TH13
    <br>  Nhóm : 05
    <br>  Ca học : Thứ 5 ca 2
