--- a/public/TH/lab.html
+++ b/public/TH/lab.html
@@ -25,7 +25,7 @@
 <body>
 
 <h1>Danh sách Lab</h1>
-<h1>Nguyễn Hữu Khang 
+<h1>Nguyễn Hữu Khang đang thi TH Mã nguồn mở
   <br>  Lớp:D22_TH13
    <br>  Nhóm : 05
    <br>  Ca học : Thứ 5 ca 2
